# flab-crud

./: .env  .gitignore  Dockerfile  alembic.ini  compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: de53a91cda5f_create_products_table.py
app/: database.py  main.py
app/crud/: product.py
app/models/: product.py
app/schemas/: product.py
tests/: conftest.py  test_main.py
