[project]
name = "flab-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "black>=25.9.0",
    "coverage>=7.10.7",
    "coverage-badge>=1.1.2",
    "fastapi[standard]>=0.116.1",
    "httpx[cli]>=0.28.1",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "psycopg[binary]>=3.2.10",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "sqlalchemy>=2.0.43",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
